--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -52,7 +52,7 @@
 
 
         <div class="cartIcon">
-          <a [routerLink]="['/Cart']">
+          <a (click)="goToCart()">
             <i class="fa-solid fa-cart-flatbed cartic"></i>
           </a>
         </div>
