--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -355,6 +355,7 @@ gap: 0.3rem;
     color: rgb(40, 23, 0);
     transition: 0.3s;
     top: 0.1rem;
+    cursor: pointer;
   }
   
   .cartIcon i:hover {
