--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -110,6 +110,38 @@ top: 0.9rem;
     color: #00356b5f;
 }
 
+.emptyCart {
+    position: relative;
+    left: 43.5%;
+    top: 3rem;
+    color: rgb(0, 114, 155);
+}
+
+.promoDiv {
+    position: relative;
+    top: 1.1rem;
+    font-family: cursive;
+}
+.finalCart button {
+border-radius: 0.3rem;
+background-color: rgb(193, 231, 238);
+height: 3.5rem;
+}
+.finalCart button:hover {
+    transform: scale(1.1);
+    color: rgb(0, 67, 114);
+    font-weight: bold;
+}
+.finalCart button:active {
+    transform: scale(1);
+}
+
+.promoDiv input {
+    background-color: rgba(0, 84, 153, 0.503);
+    border-radius: 0.3rem;
+
+}
+
 .stars {
     
     font-size: 1.21rem;
@@ -155,6 +187,61 @@ top: 0.9rem;
     position: relative;
     top: 2rem;
     margin-bottom: 2rem;
-    left: 75%;
+    
     z-index: 444;
+  }
+
+
+  .checkOutDiv {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1002;
+    background-color: rgba(112, 189, 194, 0.903);
+  }
+
+
+  .paymentDiv {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-left: 47rem;
+    margin-top: 11rem;
+    width: 27.5rem;
+    font-size: larger;
+    font-family: cursive;
+    border-radius: 0.5rem;
+    box-shadow: 5px 5px 5px rgba(0, 83, 100, 0.557);
+  }
+  .paymentDiv button {
+    width: 15rem;
+    height: 4rem;
+    margin: 1.7rem;
+    border-radius: 0.3rem;
+    background-color: rgba(0, 170, 255, 0.427);
+  }
+
+  .paymentDiv button:hover {
+    transform: scale(1.1);
+    color: rgb(0, 255, 162);
+  }
+
+  .paymentDiv button:active {
+    transform: scale(1);
+  }
+
+  .paymentMethodAndCardNumber {
+    display: flex;
+    flex-direction: column;
+    width: 17rem;
+    margin: 1rem;
+  }
+
+  .shippingAddress {
+    display: flex;
+    flex-direction: column;
+    width: 17rem;
+    margin: 1rem;
   }
