--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -349,6 +349,12 @@ gap: 0.3rem;
     color: rgb(0, 74, 105);
   }
   
+
+  .adminButton {
+    color: red;
+  }
+
+
   .cartIcon i {
     font-size: 2rem;
     position: relative;
