--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,6 @@
 <div class="decorDiv"></div>
 <h3 class="emptyCart" *ngIf="cartItemsDetailed.length < 1">cart is empty...</h3>
+<p class ="seeOrders" [routerLink]="['/User']">See my orders</p>
 <div class="cartMainDiv" *ngIf="cart">
     <div class="cartItemDiv" *ngFor="let item of cartItemsDetailed">
         <img [src]="item.images[0].url" alt="img">
@@ -40,7 +41,7 @@
 </div>
 <div class="lastCasa" *ngIf="cartItemsDetailed.length > 0">
 <div class="finalCart">
-    <h3>total price: {{cartTotalPrice}}</h3>
+    <h3>total price: {{total}}</h3>
     <button (click)="goToCheckOut()">Go checkout</button>
     </div>
 </div>
