--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -351,8 +351,38 @@ gap: 0.3rem;
   
 
   .adminButton {
+    color: rgb(0, 75, 122);
+    border-radius: 0.5rem;
+    background-color: rgba(48, 0, 73, 0.285);
+    border: none;
+    margin-right: 1rem;
+  }
+  .adminButton:hover {
+    transform: scale(1.1);
     color: red;
   }
+  .adminButton:active {
+    transform: scale(1);
+    color: rgb(0, 75, 122);
+  }
+
+  .userButton {
+    color: rgb(0, 75, 122);
+    border-radius: 0.5rem;
+    background-color: rgba(48, 0, 73, 0.285);
+    border: none;
+    margin-right: 1rem;
+  }
+  .userButton:hover {
+    transform: scale(1.1);
+    color: red;
+  }
+  .userButton:active {
+    transform: scale(1);
+    color: rgb(0, 75, 122);
+  }
+
+
 
 
   .cartIcon i {
