--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,15 @@
 <nav>
+  <div  class="showProdInputs" *ngIf="showProdInp" (click)="goToAddProduct()">
+    <div class="inps" (click)="$event.stopPropagation()">
+    <input placeholder="Name" type="text">
+    <input placeholder="Description" type="text">
+    <input placeholder="Original price" type="text">
+    <input placeholder="Category Id" type="text">
+    <input placeholder="stock" type="text">
+    <input placeholder="Image Url" type="text">
+    <button>add product</button>
+  </div>
+  </div>
     <div class="navContent">
       
       <div class="navLogoDiv">
@@ -42,7 +53,10 @@
         </div>
 
         <div class="log">
-          <button class="adminButton" *ngIf="AdminLoggedIn" (click)="goToAdminPanel()">Admin Panel</button>
+
+         
+          <button (click)="goToAddProduct()" *ngIf="AdminLoggedIn" class="adminButtonn">add product</button>
+          <button  class="adminButton" *ngIf="AdminLoggedIn" (click)="goToAdminPanel()">Admin Panel</button>
           <button class="userButton" *ngIf="!AdminLoggedIn && loggedIn" (click)="goToUserPanel()">My Orders</button>
         <div class="loggedInDiv" *ngIf="loggedIn">
           
