--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -39,9 +39,52 @@ nav {
     cursor: pointer;
     transition: transform 0.5s ease-in-out;
   }
+.showProdInputs {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4444;
+  background-color: rgba(63, 99, 131, 0.735);
+}
+
+.inps {
+  position: relative;
+  top: 15rem;
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  left: 41%;
+  gap: 2rem;
+  background-color: rgba(63, 131, 114, 0.735);
+  border-radius: 0.35rem;
+  padding: 1rem;
+  
+}
+
+.inps input {
+  height: 3rem;
+  background-color: rgba(46, 77, 75, 0.729);
+  color: rgb(4, 21, 255);
+  border-radius: 0.35rem;
+}
+.inps button:hover {
+  color: red;
+  transform: scale(1.1);
+}
+.inps button:active {
+  transform: scale(1);
+}
 
   .navLogoDiv:active {
     transform: scale(0.95);
+  }
+  .adminButtonn {
+     position: absolute;
+     top: 3.5rem;
+     right: 11.35rem;
+height: 1.9rem;
   }
 
   
