--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
 
 
 
-<nav class="navOfCategories" (mouseleave)="collapseAllCategories()" *ngIf="adminLoggedIn">
+<nav class="navOfCategories" (mouseleave)="collapseAllCategories()">
   
   <div class="categoryDiv allCategs" (mouseleave)="collapseAllCategories()">
     <ul>
