--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,11 @@
     <input placeholder="Original price" type="text">
     <input placeholder="Category Id" type="text">
     <input placeholder="stock" type="text">
+    <div class="imagesDiv">
+      <label for="Image">Image</label>
+    <input placeholder="Image Description" type="text">
     <input placeholder="Image Url" type="text">
+</div>
     <button>add product</button>
   </div>
   </div>
