--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ body, html {
   }
 
 body {
-    background-image: url('https://img.freepik.com/premium-photo/white-concrete-wall-background-vintage-style-graphic-design-wallpaper-pattern-soft-cement-floor-retro-concept-gray-abstract-texture-detail-construction_226189-5963.jpg');
+    background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20231221/pngtree-summer-ice-cream-color-simple-and-cool-image_15550164.png');
     background-attachment: fixed;
     background-size: 100% auto;
     background-repeat: no-repeat;
