--- a/src/app/admin-interface/admin-interface.component.scss
+++ b/src/app/admin-interface/admin-interface.component.scss
@@ -1,9 +1,14 @@
+
 .decorDiv {
     width: 100%;
     height: 8.51rem;
 }
 
-.mainDiv {
+h1 {
+ margin-left: 3rem;
+}
+
+.adminProductsDiv {
     margin: 2rem;
     display: flex;
     flex-wrap: wrap;
@@ -22,4 +27,45 @@
     background-color: rgba(0, 78, 119, 0.162);
     padding: 0.5rem;
     border-radius: 0.35rem;
+}
+
+.order {
+        background-color: rgba(0, 78, 119, 0.162);
+    padding: 0.5rem;
+    border-radius: 0.35rem;
+}
+
+.adminDiv {
+        margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-color: rgba(43, 103, 131, 0.068);
+    border-radius: 0.5rem;
+    padding: 2rem;
+    gap: 1rem;
+}
+
+.ords {
+      margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-color: rgba(43, 103, 131, 0.068);
+    border-radius: 0.5rem;
+    padding: 2rem;
+    gap: 1rem;
+}
+
+.comments {
+    display: flex;
+    gap: 1rem;
+}
+.submitStatus {
+    display: flex;
+    gap: 1rem;
+}
+.submitStatus input {
+    width: 5rem;
+    height: 1.9rem;
 }
