--- a/src/app/admin-interface/admin-interface.component.scss
+++ b/src/app/admin-interface/admin-interface.component.scss
@@ -5,36 +5,67 @@
 }
 
 h1 {
- margin-left: 3rem;
+ margin-left: 0rem;
 }
 
-.adminProductsDiv {
-    margin: 2rem;
+.ordss {
+    margin-left: 1rem;
     display: flex;
     flex-wrap: wrap;
     background-color: rgba(43, 103, 131, 0.068);
     border-radius: 0.5rem;
-    padding: 2rem;
+    padding: 1rem;
     gap: 1rem;
 }
 
-.product img {
-    width: 150px;
-    height: 150px;
-}
-
-.product {
-    background-color: rgba(0, 78, 119, 0.162);
-    padding: 0.5rem;
-    border-radius: 0.35rem;
-}
 
 .order {
         background-color: rgba(0, 78, 119, 0.162);
     padding: 0.5rem;
     border-radius: 0.35rem;
 }
+.adminNav {
+display: flex;
+gap: 1rem;
+}
+.adminNav ul {
+    border: 0.5px solid rgb(0, 71, 80);
+    padding: 0.3rem;
+    border-radius: 0.3rem;
+    cursor: pointer;
+}
+.adminNav ul:hover {
+    scale: 1.1;
+    background-color: rgb(0, 217, 255);
+    
+}
+.submitStatus input {
+    background-color: rgba(0, 255, 217, 0.343);
+    border-radius: 0.3rem;
+    border: 0.1px solid rgb(0, 84, 103);
+}
 
+.submitStatus button {
+        border-radius: 0.3rem;
+    border: 0.1px solid rgb(0, 84, 103);
+    background-color: rgb(0, 103, 162);
+}
+
+.submitStatus button:hover {
+        scale: 1.1;
+    background-color: rgb(0, 217, 255);
+}
+
+.submitStatus button:active {
+    scale: 1;
+}
+
+.adminNav ul:active {
+    scale: 1;
+}
+.adminNav ul.active {
+    background-color: rgb(0, 102, 174);
+}
 .adminDiv {
         margin: 1rem;
     display: flex;
@@ -53,7 +84,7 @@ h1 {
     flex-wrap: wrap;
     background-color: rgba(43, 103, 131, 0.068);
     border-radius: 0.5rem;
-    padding: 2rem;
+    padding: 1rem;
     gap: 1rem;
 }
 
@@ -68,4 +99,42 @@ h1 {
 .submitStatus input {
     width: 5rem;
     height: 1.9rem;
+}
+
+.userssDiv {
+display: flex;
+flex-wrap: wrap;
+gap: 2rem;
+}
+.userDiv {
+    background-color: rgba(2, 105, 173, 0.266);
+    padding: 0.7rem;
+    border-radius: 0.5rem;
+}
+
+.userFavProdIdsDiv h5 {
+    display: flex;
+    gap: 2rem;
+
+}
+
+
+.categoriesDiv {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+.addCategButton {
+    border-radius: 0.7rem;
+    background-color: rgba(1, 96, 173, 0.383);
+}
+.addCategButton:hover {
+    scale: 1.1;
+    background-color: rgba(1, 173, 133, 0.383);
+}
+
+.categ {
+    background-color: rgba(0, 116, 183, 0.18);
+    padding: 0.5rem;
+    border-radius: 0.7rem;
 }
