--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -77,6 +77,7 @@ background-color: rgba(0, 255, 179, 0.576)!important;
     margin-bottom: 5.1rem;
     box-shadow: 0 22px 22px rgba(241, 200, 111, 0.574);
     border-radius: 1rem;
+    z-index: 9999;
 }
 
 .categoryName.active {
@@ -102,6 +103,7 @@ background-color: rgba(0, 255, 179, 0.576)!important;
     padding: 0;     /* 👈 Removes default padding */
     list-style: none;
     border-radius: 1rem;
+    z-index: 9999;
 }
 
 .categoryName {
