--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -77,7 +77,7 @@ background-color: rgba(0, 255, 179, 0.576)!important;
     margin-bottom: 5.1rem;
     box-shadow: 0 22px 22px rgba(241, 200, 111, 0.574);
     border-radius: 1rem;
-    z-index: 9999;
+    
 }
 
 .categoryName.active {
@@ -103,7 +103,7 @@ background-color: rgba(0, 255, 179, 0.576)!important;
     padding: 0;     /* 👈 Removes default padding */
     list-style: none;
     border-radius: 1rem;
-    z-index: 9999;
+    z-index: 600;
 }
 
 .categoryName {
@@ -382,7 +382,9 @@ top: 1.1rem;
   transition: 0.3s;
   box-shadow: 0 22px 22px rgba(1, 72, 110, 0.151);
   color: #011728;
+
 }
+
 
 .card:hover {
   transform: scale(1.05);
@@ -431,12 +433,7 @@ top: 1.1rem;
   color: #00356b5f;
 }
 
-.card-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end; /* This pushes all content to the bottom */
- 
-}
+
 
 .card-img-top {
   width: 100%;
@@ -497,7 +494,7 @@ top: 1.1rem;
 
 .heart-container {
   display: inline-block;
-  z-index: 555;
+  z-index: 500;
 }
 .heart-container .fa-heart:active {
   font-size: 2.3rem;
@@ -505,6 +502,7 @@ top: 1.1rem;
 }
 
 .heart-container .fa-heart {
+    z-index: 500;
   font-size: 2rem;
   color: #043d9952; /* Unfilled heart color */
   cursor: pointer;
@@ -520,10 +518,12 @@ top: 1.1rem;
   position: absolute;
   margin: 0.3rem;
   text-shadow: 4px 4px 6px rgba(0, 23, 35, 0.732);
+    z-index: 500;
 }
 
 /* Filled heart style */
 .heart-container .fa-heart.filled {
+    z-index: 500;
   color: rgb(179, 158, 39);
   position: absolute;
   margin: 0.3rem;
@@ -830,3 +830,25 @@ gap: 1rem;
   .cartAddButton:active {
     transform: scale(1);
   }
+
+  .card input {
+    background-color: rgba(0, 112, 173, 0.081);
+    border-radius: 0.5rem;
+    border: none;
+    padding-left: 0.5rem;
+    height: 2rem;
+  }
+  .editButtonLast {
+ position: relative;
+ top: 2rem;
+    background-color: rgba(0, 128, 102, 0.371);
+  }
+
+  .card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* This pushes all content to the bottom */
+  margin-top: 1rem;
+}
+
+
